--- a/app/components/article-thumb-panel/main-tmpl.html
+++ b/app/components/article-thumb-panel/main-tmpl.html
@@ -1,8 +1,7 @@
-<div class="articleThumb" :style="{background: cover}">
-    <!-- <div class="thumb-img">
-        <img :src="article.cover_image" />
-    </div> -->
-    <div class="thumb-content">
+<div class="articleThumb" :style="{background: cover}" :class="{selected: article.id == selected}">
+    <div class="shadow"></div>
+    <div class="thumb-content" :style="{color: article.color+'!important'}">
         <h1><span>{{article.country}}:</span> {{article.subtitle}}</h1>
+        <h2 v-text="article.tagline"></h2>
     </div>
 </div>
