--- a/app/components/nav-bar/main.css
+++ b/app/components/nav-bar/main.css
@@ -1,7 +1,15 @@
 .NavBar {
+    transition: all 0.3s ease;
     height: 60px;
     background-color: #084c6d;
     z-index: 100;
+    position: fixed;
+    width: 100%;
+    top: 0;
+}
+
+.NavBar.shown {
+    top: 250px;
 }
 
 .NavBar
@@ -37,6 +45,28 @@ a {
     color: white;
     font-size: 20px;
     padding: 0 20px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.NavBar
+.nav-bar-right
+a span {
+    cursor: pointer;
+}
+
+.NavBar
+.nav-bar-right
+a img {
+    height: 15px;
+    transition: all 0.3s;
+}
+
+.NavBar
+.nav-bar-right
+.open
+img {
+    transform: rotateX(180deg);
 }
 
 .NavBar
@@ -47,9 +77,16 @@ a {
 }
 
 .NavBar
+.nav-bar-right
+.mobile-btn
+img {
+    height: 25px;
+}
+
+.NavBar
 .nav-bar-dropdown {
     position: fixed;
-    right: 70px;
+    right: 40px;
     z-index: 10;
 }
 
@@ -73,9 +110,71 @@ li {
     text-align: center;
     font-weight: 200;
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+    cursor: pointer;
+}
+
+.NavBar
+.mobile-nav {
+    transition: all 0.3s ease;
+    display: flex;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 250px;
+    background: #084c6d;
+    top: 0;
+    z-index: 10;
+    transform: translateY(-100%);
+    padding: 10px 0;
+    box-sizing: border-box;
+}
+
+.NavBar.shown
+.mobile-nav {
+    transform: translateY(0);
+}
+
+.NavBar
+.mobile-nav
+ul {
+    align-self: center;
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    color: white;
+    text-transform: uppercase;
+    width: 100%;
+}
+
+.NavBar
+.mobile-nav
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.NavBar
+.mobile-nav
+span {
+    padding: 0 5px;
+}
+
+.NavBar
+.mobile-nav
+img {
+    height: 15px;
+}
+
+.NavBar
+.mobile-nav
+.open
+img {
+    transform: rotateX(180deg);
 }
 
 @media (max-width: 750px) {
+
     .NavBar
     .nav-bar-right
     >a {
@@ -85,6 +184,8 @@ li {
     .nav-bar-right
     .mobile-btn
     a {
+        padding: 0;
+        margin: 15px;
         display: block;
     }
 }
