--- a/app/main.css
+++ b/app/main.css
@@ -14,9 +14,16 @@ html{
 }
 
 body {
+    transition: padding .3s ease;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 200;
     min-height: 100%;
+    padding-top: 60px;
+    box-sizing: border-box;
+}
+
+body.mobile {
+    padding-top: 310px;
 }
 
 h1, h2, h3, h4, h5 ,h6, p {
@@ -28,4 +35,58 @@ h1, h2, h3, h4, h5 ,h6, p {
     width: 100%;
     overflow: hidden;
     position: relative;
+}
+
+.modal {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.9);
+    z-index: 200;
+    overflow: hidden;
+}
+
+.modal
+.close {
+    position: absolute;
+    right: 0;
+    margin: 10px;
+    width: 40px;
+    cursor: pointer;
+}
+
+.modal
+.close
+img {
+    width: 100%;
+}
+
+/*
+------ Transitions ------
+*/
+
+.left-slide-transition {
+    transition: all .3s ease;
+    transform: translateX(0);
+    opacity: 1;
+}
+
+.left-slide-enter {
+    transform: translateX(100%);
+    opacity: 0;
+}
+
+.left-slide-leave {
+    transition: all 0s;
+    opacity: 0;
+}
+
+.fade-transition {
+    transition: opacity .5s ease;
+    opacity: 1;
+}
+
+.fade-enter, .fade-leave {
+    opacity: 0;
 }
