--- a/app/pages/articles/main.css
+++ b/app/pages/articles/main.css
@@ -6,6 +6,40 @@
 
 .ArticlesPage
 .articles-index {
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
+    text-align: center;
+    padding-bottom: 28px;
+    box-sizing: border-box;
+}
+
+.ArticlesPage
+.articles-index
+.back {
+    position: fixed;
+    top: 65px;
+    width: 50px;
+    height: 50px;
+    background: #084c6d;
+    z-index: 100;
+    padding: 6px;
+    box-sizing: border-box;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
+    cursor: pointer;
+}
+
+.ArticlesPage
+.articles-index
+.back
+img {
+    width: 100%;
+    height: 100%;
+}
+
+.ArticlesPage
+.articles-index
+.flex {
     -webkit-align-content: flex-start; /* Safari */
     align-content:         flex-start;
     -webkit-justify-content: center; /* Safari */
@@ -15,8 +49,18 @@
     display: -webkit-inline-flex;
     display:         inline-flex;
     width: 100%;
-    height: 100%;
-    overflow: scroll;
+}
+
+.ArticlesPage
+.articles-index
+button {
+    border: none;
+    color: white;
+    background: #084c6d;
+    padding: 10px;
+    margin: 20px;
+    border-radius: 2px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
 }
 
 .ArticlesPage
@@ -24,20 +68,56 @@
 h4 {
     width: 100%;
     text-align: center;
+    margin-top: 15px;
+    margin-bottom: 0;
+    padding: 0 15px;
+    box-sizing: border-box;
+}
+
+.ArticlesPage
+.articles-index
+.filter {
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: 200;
 }
 
 .ArticlesPage
 .articles-index.side {
     position: absolute;
     left: 0;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
     width: 20%;
     background: white;
     -webkit-box-shadow: 4px 0px 9px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 4px 0px 9px 0px rgba(0,0,0,0.75);
     box-shadow: 4px 0px 9px 0px rgba(0,0,0,0.75);
+
 }
+/* Scrollbar */
+
+.ArticlesPage
+.articles-index.side::-webkit-scrollbar{
+    width: 5px;
+}
+.ArticlesPage
+.articles-index.side::-webkit-scrollbar-thumb{
+    background-color:rgb(8, 76, 109);
+    border-radius: 0;
+}
+.ArticlesPage
+.articles-index.side::-webkit-scrollbar-thumb:hover{
+    background-color:rgb(8, 76, 109);
+}
+.ArticlesPage
+.articles-index.side::-webkit-scrollbar-track{
+    background-color:rgb(237, 237, 237);
+}
+
+
+/* End Scrollbar */
 
 .ArticlesPage
 .articles-index.side
