--- a/app/components/nav-bar/main-tmpl.html
+++ b/app/components/nav-bar/main-tmpl.html
@@ -4,7 +4,7 @@
             <a class="logo" href="//www.backtrackerapp.com" ><img src="resources/logo-shadow.png" /></a>
         </div>
         <div class="nav-bar-right">
-            <a target="_blank" href="//www.backtrackerapp.com">Home</a>
+            <a href="//www.backtrackerapp.com">Home</a>
             <a @click="go_home">Articles <span @click.stop="toggle_categories" :class="{open: categ}"><img src="resources/chevron.svg" class="toggle" /></span></a>
             <a v-link.literal="/gallery">Gallery</a>
             <div class="mobile-btn">
