--- a/app/pages/articles/main.css
+++ b/app/pages/articles/main.css
@@ -8,7 +8,7 @@
 .articles-index {
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow-y: scroll;
     text-align: center;
     padding-bottom: 28px;
     box-sizing: border-box;
