now a working push state server

--- a/app/components/article-read-panel/main-tmpl.html
+++ b/app/components/article-read-panel/main-tmpl.html
@@ -16,4 +16,5 @@
         <div class="article-content" v-html="article.body">
         </div>
     </template>
+    <!-- <contact-panel v-if="!$loadingRouteData"></contact-panel> -->
 </div>
