--- a/app/components/nav-bar/main-tmpl.html
+++ b/app/components/nav-bar/main-tmpl.html
@@ -1,12 +1,13 @@
 <div class="NavBar" :class="{shown: mobile_nav}">
     <div class="nav-bar-content">
         <div class="nav-bar-left">
-            <a class="logo" href="//www.backtrackerapp.com" ><img src="resources/logo-shadow.png" /></a>
+            <a class="logo" href="//www.backtracker.co" ><img src="resources/logo-shadow.png" /></a>
         </div>
         <div class="nav-bar-right">
-            <a href="//www.backtrackerapp.com">Home</a>
-            <a @click="go_home">Articles <span @click.stop="toggle_categories" :class="{open: categ}"><img src="resources/chevron.svg" class="toggle" /></span></a>
-            <a v-link.literal="/gallery">Gallery</a>
+            <a href="//www.backtracker.co">Home</a>
+            <a @click="go_home">Blogs <span @click.stop="toggle_categories" :class="{open: categ}"><img src="resources/chevron.svg" class="toggle" /></span></a>
+            <!-- <a v-link.literal="/gallery">Gallery</a> -->
+            <a href="//app.backtracker.co/#/?login=t&menu=t" class="login">Web app</a>
             <div class="mobile-btn">
                 <a @click="toggle_mobile_nav">
                     <img src="resources/cross.png" v-show="mobile_nav"/>
@@ -27,7 +28,7 @@
     </div>
     <div class="mobile-nav">
         <ul>
-            <li @click.stop="toggle_mobile_categories">Articles</li>
+            <li @click.stop="toggle_mobile_categories">Blogs</li>
             <li>&mdash;</li>
             <template v-if="mobile_categ">
                 <li @click="go_home">All</li>
@@ -39,14 +40,13 @@
                 <li @click="go_category('africa')">Africa</li>
             </template>
             <template v-else>
-                <li v-link.literal="/gallery">Gallery</li>
+                <!-- <li v-link.literal="/gallery">Gallery</li> -->
                 <li>&mdash;</li>
                 <li><a href="mailto:henry@backtrackerapp.co.uk">Contact</a></li>
                 <li>&mdash;</li>
                 <li><a target="_blank" href="https://www.facebook.com/backtrackerapp">Facebook</a></li>
                 <li><a target="_blank" href="https://twitter.com/BacktrackerApp">Twitter</a></li>
                 <li><a target="_blank" href="http://instagram.com/backtrackerapp/">Instagram</a></li>
-                <li><a target="_blank" href="http://backtrackerapp.tumblr.com/">Tumblr</a></li>
             </template>
         </ul>
     </div>
