--- a/app/components/nav-bar/main.css
+++ b/app/components/nav-bar/main.css
@@ -6,6 +6,9 @@
     position: fixed;
     width: 100%;
     top: 0;
+
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 .NavBar.shown {
@@ -47,6 +50,19 @@ a {
     padding: 0 20px;
     cursor: pointer;
     text-decoration: none;
+}
+
+.NavBar
+.nav-bar-right
+a.login {
+    margin: 11px;
+    background: #f06e40;
+    height: 38px;
+    border-radius: 5px;
+    text-align: center;
+    padding-top: 6px;
+    box-sizing: border-box;
+    /*text-transform: uppercase;*/
 }
 
 .NavBar
