--- a/app/components/nav-bar/main.css
+++ b/app/components/nav-bar/main.css
@@ -128,6 +128,13 @@ li {
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.5);
     cursor: pointer;
 }
+.NavBar
+.nav-bar-dropdown
+li
+a {
+    color: white;
+    text-decoration: none;
+}
 
 .NavBar
 .mobile-nav {
