--- a/index.ejs
+++ b/index.ejs
@@ -23,6 +23,7 @@
         <meta property="og:title" content="<%= title %>" />
         <meta property="og:description" content="<%= description %>" />
         <meta property="og:image" content="<%= image %>" />
+        <meta property="og:url" content="http://blogs.backtracker.co/<%= id %>" />
         <meta property="og:site_name" content="BackTracker" />
         <meta property="fb:app_id" content="412307002251243" />
 
