--- a/app/components/article-thumb-panel/main.css
+++ b/app/components/article-thumb-panel/main.css
@@ -5,9 +5,7 @@
     background-size: cover;
     width: 300px;
     height: 250px;
-    margin: 0 25px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin: 15px 10px;
     overflow: hidden;
     position: relative;
     cursor: pointer;
