--- a/index.ejs
+++ b/index.ejs
@@ -119,10 +119,10 @@
           </svg>
         </div>
 
-        <!-- <script src="jspm_packages/system.js"></script>
+        <script src="jspm_packages/system.js"></script>
         <script src="config.js"></script>
         <script type="text/javascript">
             System.import("app/main");
-        </script> -->
+        </script>
     </body>
 </html>
