--- a/index.ejs
+++ b/index.ejs
@@ -20,7 +20,7 @@
         <meta name=”fragment” content=”!”>
 
         <!-- facebook meta properties -->
-        <meta property="og:title" content="<%= title %>" />
+        <meta property="og:title" content="<%= title %> | BackTracker Guides" />
         <meta property="og:description" content="<%= description %>" />
         <meta property="og:image" content="<%= image %>" />
         <meta property="og:url" content="http://blogs.backtracker.co/<%= id %>" />
