--- a/index.ejs
+++ b/index.ejs
@@ -18,6 +18,7 @@
         <meta name="author"      content="Backtracker" />
         <meta name="version"     content="1.0" />
         <meta name=”fragment” content=”!”>
+        <meta name="google-site-verification" content="oGDzlrqG4laMV7CYAjj1JRzxJFy2UDHy-IPkw0s1oN8" />
 
         <!-- facebook meta properties -->
         <meta property="og:title" content="<%= title %> | BackTracker Guides" />
